start of login form

--- a/index.html
+++ b/index.html
@@ -6,8 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My login page</title>
     <script src="/scripts/login_page.js" defer></script>
+    <link rel="stylesheet" href="/styles/desktop.css">
 </head>
 <body>
+    <div class="container">
+        <h1>Login</h1>
+        <form action="#" method="post">
+            <input type="text" placeholder="Username" class="field">
+			<input type="password" placeholder="Password" class="field">
+			<input type="submit" value="Login" class="btn">
+        </form>
+        <div class="new_user">New user</div>
+    </div>
     
 </body>
 </html>
