form is somewhat responsive

--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My login page</title>
-    <script src="/scripts/login_page.js" defer></script>
+    <script src="/scripts/login_page.js" defer></script>    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Alumni+Sans:wght@100&family=Festive&family=Montserrat:wght@100;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/styles/desktop.css">
 </head>
 <body>
@@ -15,9 +18,8 @@
             <input type="text" placeholder="Username" class="field">
 			<input type="password" placeholder="Password" class="field">
 			<input type="submit" value="Login" class="btn">
-        </form>
-        <div class="new_user">New user</div>
-    </div>
-    
+            <button class="btn">New user</button>
+        </form>        
+    </div>    
 </body>
 </html>
