Javascript file containing create new user event listner

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 <body>
     <div class="container">
         <h1>Login</h1>
-        <form action="#" method="post">
+        <form action="" method="post" id="my_form">
             <input type="text" placeholder="Username" class="field">
 			<input type="password" placeholder="Password" class="field">
-			<input type="submit" value="Login" class="btn">
-            <button class="btn">New user</button>
-        </form>        
+			<input type="submit" value="Login" class="btn">            
+        </form>   
+        <button class="btn" id="new_user">New user</button>     
     </div>    
 </body>
 </html>
