start of login logic

--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
 <body>
     <div class="container">
         <h1>Login</h1>
-        <form action="" method="post" id="my_form">
-            <input type="text" placeholder="Username" class="field">
-			<input type="password" placeholder="Password" class="field">
-			<input type="submit" value="Login" class="btn">            
-        </form>   
+        <!-- <form action="" method="post" id="my_form"> -->
+        <div id="my_form">
+        <input type="text" placeholder="Username" class="field" id="username">
+			<input type="password" placeholder="Password" class="field" id="password">
+			<!-- <input type="submit" value="Login" class="btn" id="login_btn">             -->
+            <button class="btn" id="login_btn">Login</button>   
+        </div>   
         <button class="btn" id="new_user">New user</button>     
     </div>    
 </body>
