--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@
         <!-- 🥰💀✌️🌴🐢🐐🍄⚽🍻👑📸😬👀🚨🏡🕊️🏆😻🌟🧿🍀🎨🍜 -->
         <h1>🐐</h1>
         <div class="navbar_options">
-            <a href="#home">Home</a>
-            <a href="#news">News</a>
-            <a href="#contact">Contact</a>
+            <a href="" id="nav_new_user">Create new user</a>
         </div>
     </nav>
     <main>
