--- a/index.html
+++ b/index.html
@@ -27,17 +27,15 @@
         <!-- 🥰💀✌️🌴🐢🐐🍄⚽🍻👑📸😬👀🚨🏡🕊️🏆😻🌟🧿🍀🎨🍜 -->
         <h1>🐐</h1>
         <div class="navbar_options">
-            <a href="" id="nav_new_user">Create new user</a>
+            <div id="nav_new_user">Create a new user</div>
         </div>
     </nav>
     <main>
         <div class="container">
             <h1>Login</h1>
-            <!-- <form action="" method="post" id="my_form"> -->
             <div id="my_form">
                 <input type="text" placeholder="Username" class="field" id="username">
                 <input type="password" placeholder="Password" class="field" id="password">
-                <!-- <input type="submit" value="Login" class="btn" id="login_btn">             -->
                 <button class="btn" id="login_btn">Login</button>
             </div>
             <button class="btn" id="new_user">New user</button>
