--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
 </head>
 
 <body>
-
     <nav>
-        <!-- 🥰💀✌️🌴🐢🐐🍄⚽🍻👑📸😬👀🚨🏡🕊️🏆😻🌟🧿🍀🎨🍜 -->
         <h1>🐐</h1>
         <div class="navbar_options">
             <div id="nav_new_user">Create a new user</div>
@@ -33,12 +31,14 @@
     <main>
         <div class="container">
             <h1>Login</h1>
-            <div id="my_form">
+            <from id="my_form" action="javascript:void(0);">
                 <input type="text" placeholder="Username" class="field" id="username" pattern="[A-Z,a-z,0-9]{1,10}">
+                <div class="error_msg_box" id="e_name">"error message"</div>
                 <input type="password" placeholder="Password" class="field" id="password" pattern="[A-Z,a-z,0-9]{1,10}">
-                <button class="btn" id="login_btn">Login</button>
-            </div>
-            <button class="btn" id="new_user">New user</button>
+                <div class="error_msg_box" id="e_pass">"error message"</div>              
+                <button type="submit" value="Submit" class="btn" id="login_btn">Login</button>
+                <button class="btn" id="new_user">New user</button>
+            </from>            
         </div>
     </main>
 </body>
